fix grid spacing from missing unit

--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ div.header {
   padding: 1rem 1rem 0 0;
   width: 18rem;
   max-width: 100%;
-  margin: 1.5rem 1rem 1.5 0;
+  margin: 1.5rem 1rem 1.5rem 0;
   white-space: nowrap;
 }
 
